--- a/2DHockey/2DHockey/My Project/Resources.resx
+++ b/2DHockey/2DHockey/My Project/Resources.resx
@@ -232,4 +232,7 @@
   <data name="space_key_s" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\space_key_s.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="scoreboardfont" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\assets\Font\scoreboard.ttf;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
